<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".roughestimate.RoughEstimateFragment">

    <data>

        <variable
            name="boardViewModel"
            type="com.fias.ddrhighspeed.ScrollSpeedBoardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.DdrScrollSpeedBoard">

        <!--  TextEdit 以外をタッチしたときのために focus 関連プロパティを設定している  -->
        <TextView
            android:id="@+id/scrollSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/input_label"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingTop="@dimen/bus_stop_item_vertical_padding"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toTopOf="@id/table_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollSpeedLabel">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:hint="@string/input_hint"
                app:errorIconDrawable="@drawable/ic_error"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintBottom_toTopOf="@id/increment_up"
                app:layout_constraintEnd_toStartOf="@id/increment_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollSpeedLabel">

                <com.fias.ddrhighspeed.view.TextEditWithHideKeyBoard
                    android:id="@+id/text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@={boardViewModel.scrollSpeed}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.fias.ddrhighspeed.view.SpinButton
                android:id="@+id/increment_up"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_vertical_fullsize_material"
                android:text="@string/spin_button_up_label"
                app:layout_constraintBottom_toTopOf="@id/tab_layout"
                app:layout_constraintEnd_toStartOf="@id/increment_down"
                app:layout_constraintStart_toEndOf="@id/textField"
                app:layout_constraintTop_toBottomOf="@id/scrollSpeedLabel" />

            <com.fias.ddrhighspeed.view.SpinButton
                android:id="@+id/increment_down"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_vertical_fullsize_material"
                android:text="@string/spin_button_down_label"
                app:layout_constraintBottom_toTopOf="@id/tab_layout"
                app:layout_constraintStart_toEndOf="@id/increment_up"
                app:layout_constraintTop_toBottomOf="@id/textField" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/table_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/bus_stop_item_vertical_padding"
            android:paddingBottom="@dimen/bus_stop_item_vertical_padding"
            app:layout_constraintBottom_toTopOf="@id/recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout">

            <TextView
                android:id="@+id/bpm_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/table_header_bpm"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/recycler_view"
                app:layout_constraintEnd_toStartOf="@id/high_speed_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/high_speed_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/table_header_hs"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/recycler_view"
                app:layout_constraintEnd_toStartOf="@id/scroll_speed_header"
                app:layout_constraintStart_toEndOf="@id/bpm_header"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/scroll_speed_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="14"
                android:gravity="end"
                android:text="@string/table_header_scroll_speed"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/high_speed_header"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <com.fias.ddrhighspeed.view.HighSpeedListView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0pt"
            android:requiresFadingEdge="vertical"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/adView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/table_header" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="@string/admob_banner_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>